<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TestLibMuseAndroid</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="connect">Connect</string>
    <string name="status">Connection Status:</string>
    <string name="disconnect">Disconnect</string>
    <string name="refresh">Refresh</string>
    <string name="init_val">0.0</string>
    <string name="eeg">EEG data:</string>
    <string name="accel">Accelerometer Data:</string>
    <string name="version">Version:</string>
    <string name="undefined">unknown</string>
    <string name="artifacts">Blinks, Jaw: </string>
    <string name="msg_count">Msg number, size: </string>
    <string name="pause">Pause/Resume</string>
    <string name="drop">Drop</string>
    <string name="muse_elem">Elements:</string>
    <string name="action_add_phone">Add Phone</string>
    <string name="action_refresh_muse">Refresh</string>
    <string name="action_connect_muse">Connect</string>
    <string name="action_disconnect_muse">Disconnect</string>
    <string name="action_pause_muse">Pause</string>
    <string name="action_log_muse">Write Log</string>

</resources>
