<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.interaxon.test.libmuse.MainActivity" >

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_settings"/>
    <item
        android:id="@+id/action_connect_muse"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_connect_muse"/>
    <item
        android:id="@+id/action_disconnect_muse"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_disconnect_muse"/>
    <item
        android:id="@+id/action_pause_muse"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_pause_muse"/>
    <item
        android:id="@+id/action_log_muse"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_log_muse"/>

    <item
        android:id="@+id/action_refresh_muse"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_refresh_muse"/>
    <item
        android:id="@+id/action_add"
        android:orderInCategory="100"
        android:showAsAction="always"
        android:title="@string/action_add_phone"/>

</menu>
